[package]
name = "dumbmath"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
description = "A pretty dumb math library oriented towards computer graphics"
documentation = "http://nicholasbishop.github.io/dumbmath-rs/doc/dumbmath"
keywords = ["3d", "graphics", "intersection", "math", "vector"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/nicholasbishop/dumbmath-rs"
version = "0.2.2"
